--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h3{
 #main > div:nth-child(2) > div{
     animation-name: wachsen2;
 }
-#main > div:last-child > div{
+#main > div:nth-child(3) > div{
     animation-name: wachsen3;
 }
 .kategorien{
